# doa5lr-resolution-mod

./: .gitignore  .gitmodules  CMakeLists.txt  Doa5lrResolutionMod.sln  README  README.md
D3d3Proxy/: D3d3Proxy.vcxproj  D3d3Proxy.vcxproj.filters  Resource.rc  hooks.cpp  hooks.h  libpad.cpp  main.cpp
doc/end-users/: mod_resolution.ini  mod_resolution_readme.txt
installer/: ConfigDialog.wxs  ExitDialog.wxs  GameNotFoundDlg.wxs  InstallDirDlg.wxs  ModExistsDlg.wxs  WixUI_InstallDir.wxs  license.txt  main.cmake  main.iss  main.wxs  patch.txt
scripts/: MakeReleasePackage.bat
src/: GameMod.cpp  GameMod.hpp  GameModInitializer.cpp  GameModInitializer.hpp  Resource.rc  StandardPaths.h  StandardPaths_msw.cpp  StandardPaths_msw.h  d3d9_types.h  exports.cpp  exports.def  hooks.cpp  libpad.h  main.cpp  util.cpp  util.h  version.hpp  version.rc.in
src/common/: MinHook.cpp  MinHook.hpp  OsVersion.cpp  OsVersion.hpp  Process.cpp  Process.hpp  util.cpp  util.hpp
src/config/: Config.hpp  FileConfig.hpp  LocalFileConfig.hpp
src/d3d9/: D3d9Library.cpp  D3d9Library.hpp  SystemD3d9Library.cpp  SystemD3d9Library.hpp
src/game/: AspectRatioPatch.cpp  AspectRatioPatch.hpp  GameFunctions.hpp  SetResolutionHook.cpp  SetResolutionHook.hpp  ViewportPatch.cpp  ViewportPatch.hpp
src/log/: FileLogger.cpp  FileLogger.hpp  LogLevel.hpp  Logger.cpp  Logger.hpp  NullLogger.cpp  NullLogger.hpp  StreamLogger.cpp  StreamLogger.hpp
src/steam/: SteamApiInitHook.hpp  SteamApiLibrary.cpp  SteamApiLibrary.hpp
src/system/: NtdllLibrary.cpp  NtdllLibrary.hpp  SetDpiAware.cpp  SetDpiAware.hpp  ShcoreLibrary.cpp  ShcoreLibrary.hpp  SystemNtdllLibrary.cpp  SystemNtdllLibrary.hpp  SystemShcoreLibrary.cpp  SystemShcoreLibrary.hpp  SystemUser32Library.cpp  SystemUser32Library.hpp  User32Library.cpp  User32Library.hpp
src/system/dpi/: IScopedDpiAwarenessImpl.hpp  ScopedDpiAwareness.cpp  ScopedDpiAwareness.hpp  ScopedDpiAwarenessWin10_0_14393.hpp  ScopedDpiAwarenessWin8_1.hpp  ScopedDpiAwarenessWinLegacy.hpp  ScopedDpiAwareness_SetProcessDPIAware.hpp  ScopedDpiAwareness_SetProcessDpiAwareness.hpp  ScopedDpiAwareness_SetThreadDpiAwarenessContext.hpp
